--- a/source/form.html
+++ b/source/form.html
@@ -12,14 +12,14 @@
 
 <body class="page-body">
   <header class="main-header">
-    <a class="main-header__logo logo" href="index.html">
-      <picture>
-        <source media="(min-width: 1150px)" srcset="./img/mishka-logo-desktop.svg">
-        <source media="(min-width: 768px)" srcset="./img/mishka-logo-tablet.svg">
-        <img class="main-header__logo-image" src="./img/mishka-logo-mobile.svg" alt="Логотип магазина Мишка.">
-      </picture>
-    </a>
     <nav class="main-nav main-nav--hidden main-nav--nojs">
+      <a class="main-nav__logo logo" href="index.html">
+        <picture>
+          <source media="(min-width: 1150px)" srcset="./img/mishka-logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="./img/mishka-logo-tablet.svg">
+          <img class="main-header__logo-image" src="./img/mishka-logo-mobile.svg" alt="Логотип магазина Мишка.">
+        </picture>
+      </a>
       <button class="main-nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню.</span>
       </button>
