--- a/source/index.html
+++ b/source/index.html
@@ -13,14 +13,14 @@
 <body>
   <div class="page-body">
     <header class="main-header">
-      <a class="main-header__logo logo">
-        <picture>
-          <source media="(min-width: 1150px)" srcset="./img/mishka-logo-desktop.svg">
-          <source media="(min-width: 768px)" srcset="./img/mishka-logo-tablet.svg">
-          <img class="main-header__logo-image" src="./img/mishka-logo-mobile.svg" alt="Логотип магазина Мишка.">
-        </picture>
-      </a>
       <nav class="main-nav main-nav--hidden main-nav--nojs">
+        <a class="main-nav__logo logo">
+          <picture>
+            <source media="(min-width: 1150px)" srcset="./img/mishka-logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="./img/mishka-logo-tablet.svg">
+            <img class="main-header__logo-image" src="./img/mishka-logo-mobile.svg" alt="Логотип магазина Мишка.">
+          </picture>
+        </a>
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню.</span>
         </button>
@@ -119,8 +119,8 @@
           <li class="reviews__item">
             <blockquote class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого
               количества
-              лайков, как у&nbspпопулярных инстамамочек. В&nbspотчаянии, я накупила аксессуаров и игрушек в Мишке,
-              и&nbspмои
+              лайков, как у&nbsp;популярных инстамамочек. В&nbsp;отчаянии, я накупила аксессуаров и игрушек в Мишке,
+              и&nbsp;мои
               фотографии
               сразу стали более стильными, а также набирают больше лайков!</blockquote>
             <div class="reviews__autor">
