--- a/source/index.html
+++ b/source/index.html
@@ -72,10 +72,21 @@
         <h2 class="intro__title title">Милые штуки ручной<br>работы для дома</h2>
         <ul class="intro__list">
           <li class="intro__item intro__item--primary">
-            <a class="intro__link" href="#">Предметы интерьера</a>
+            <a class="intro__link" href="#">Предметы<br>интерьера</a>
+            <svg class="intro__icon" width="41" height="62" viewBox="0 0 41 62" fill="currentColor"
+              xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M15.502 37.656c-.306.994-.204 2.186 0 3.577.51 2.584 1.734 5.962 2.448 9.638h5.202c.714-3.577 1.938-6.955 2.55-9.638.305-1.39.305-2.682 0-3.577-.307-.894-.919-1.59-2.04-2.285h-6.12c-1.224.696-1.836 1.391-2.04 2.285ZM27.537 57.528H13.463c-1.326 0-2.346.994-2.346 2.186V61.9H29.883v-2.186c0-1.192-1.02-2.186-2.346-2.186ZM34.779 2.186H22.846C22.846.994 21.826 0 20.5 0s-2.346.994-2.346 2.186H6.221L0 27.522c.816-.496 1.632-.993 2.652-.993 1.428 0 2.244.795 2.957 1.39.714.597 1.224.796 1.428.796.306 0 .816-.298 1.53-.795.714-.497 1.632-1.391 2.958-1.391 1.326 0 2.244.795 2.958 1.39.713.498 1.223.796 1.53.796.101 0 .305-.1.611-.199.204-.1.51-.397.918-.596.51-.398 1.122-.994 2.04-1.192.306-.1.612-.1.918-.1 1.326 0 2.244.795 2.958 1.391.714.497 1.224.795 1.53.795.306 0 .816-.298 1.427-.795.714-.596 1.632-1.39 2.958-1.39 1.428 0 2.244.794 2.958 1.39.306.298.612.497.918.596.204.1.408.2.612.2.306 0 .816-.299 1.428-.895.713-.596 1.631-1.391 2.957-1.391 1.02 0 1.836.497 2.652.993l-6.12-25.336ZM23.968 53.057H16.93c-.714 0-1.121.497-1.121 1.093s.51 1.093 1.121 1.093h7.038c.714 0 1.122-.497 1.122-1.093.102-.596-.408-1.093-1.122-1.093Z" />
+              <path
+                d="M20.5 28.714c-.102 0-.306.1-.612.199-.204.1-.408.298-.612.397v3.677h2.346V29.41c-.51-.398-.918-.696-1.122-.696Z" />
+            </svg>
           </li>
           <li class="intro__item intro__item--secondary">
-            <a class="intro__link" href="#">Детские игрушки</a>
+            <a class="intro__link" href="#">Детские<br>игрушки</a>
+            <svg class="intro__icon" width="61" height="61" viewBox="0 0 61 61" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M0 44.73 27.86 61V37.15L0 20.78v23.95Zm52.16-32.04v2.56c0 1.84-3.56 3.38-7.83 3.38-4.38 0-7.83-1.54-7.83-3.38v-4.2c.3 1.74 3.66 3.18 7.83 3.18 4.37 0 7.83-1.54 7.83-3.38 0-1.84-3.56-3.38-7.83-3.38H43.3L38.23 4.5v3.18c0 1.84-3.56 3.37-7.83 3.37-2.75 0-5.08-.61-6.5-1.53-.21-.2-.41-.41-.72-.62-.4-.4-.61-.81-.61-1.22V4.6l-4.88 2.86h-1.12c-4.37 0-7.83 1.54-7.83 3.38 0 1.84 3.56 3.38 7.83 3.38 4.17 0 7.52-1.44 7.83-3.18v4.2c0 1.84-3.56 3.38-7.83 3.38-4.37 0-7.83-1.54-7.83-3.38v-2.46l-6.1 3.59L30.6 32.75l27.86-16.27-6.3-3.79ZM38.33 23.13c0 1.84-3.56 3.38-7.83 3.38-4.37 0-7.83-1.54-7.83-3.38v-4.2c.3 1.74 3.66 3.18 7.83 3.18s7.52-1.44 7.83-3.18v4.2Zm-5.19 14.23V61L61 44.73V21.08L33.14 37.36ZM30.4 6.76c4.37 0 7.83-1.54 7.83-3.38C38.23 1.54 34.67 0 30.4 0c-4.37 0-7.83 1.54-7.83 3.38 0 1.84 3.46 3.38 7.83 3.38Z" />
+            </svg>
           </li>
         </ul>
       </section>
@@ -189,33 +200,33 @@
         <ul class="social__list">
           <li class="social__item">
             <a href="https://vk.com/htmlacademy" class="social__link">
-              <svg class="social__icon social__icon--vk" width="27" height="18" viewBox="0 0 27 18" fill="none"
+              <svg class="social__icon social__icon--vk" width="27" height="18" viewBox="0 0 27 18" fill="currentColor"
                 xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M0 2.839c0-.855.515-1.316 1.545-1.383l3.97.025a.52.52 0 0 1 .533.377c.409 1.257.866 2.343 1.372 3.257.506.913 1.168 1.965 1.985 3.156.071.15.187.226.346.226.125 0 .222-.059.293-.176l.08-.277.027-4.35c0-.302-.075-.503-.226-.604-.151-.1-.431-.176-.84-.226-.32-.05-.48-.235-.48-.553 0-.067.01-.118.027-.151.373-1.09 1.44-1.635 3.198-1.635L13.322.5c.675 0 1.234.16 1.678.478.444.318.666.821.666 1.509v5.708c.125.084.24.126.347.126.266 0 .497-.15.692-.453 1.954-2.582 3.011-4.308 3.17-5.18 0-.017.019-.059.054-.126.125-.251.329-.47.613-.654.284-.184.533-.31.746-.377a.554.554 0 0 1 .24-.05h4.13l.266.025c.355 0 .63.16.826.478.07.1.12.21.146.327.027.117.045.234.054.352.009.117.013.184.013.2v.177c-.124.687-.44 1.42-.946 2.2-.506.78-1.15 1.622-1.931 2.528-.782.905-1.27 1.5-1.466 1.785-.16.201-.24.386-.24.553 0 .135.071.286.213.453l3.89 4.627c.213.269.32.562.32.88 0 .386-.16.705-.48.956-.32.252-.701.394-1.145.428l-.453.025h-4.05a.855.855 0 0 0-.106.012.862.862 0 0 1-.107.013c-.39 0-.755-.16-1.092-.478-.125-.134-.96-1.123-2.505-2.967a1.387 1.387 0 0 0-.373-.327c-.07.268-.164.654-.28 1.157-.115.503-.2.863-.253 1.081l-.08.428c-.177.586-.55.938-1.119 1.056l-.373.025h-2.61c-1.475 0-2.945-.637-4.41-1.911-1.466-1.275-2.784-2.922-3.957-4.942C2.238 8.602 1.146 6.25.133 3.568A1.916 1.916 0 0 1 0 2.838Zm16.013 6.513c-.373 0-.71-.096-1.013-.29-.302-.192-.453-.456-.453-.791V2.487c0-.336-.089-.575-.266-.717-.178-.143-.489-.214-.933-.214l-1.518.05c-.764 0-1.341.126-1.732.378.781.352 1.172.922 1.172 1.71V8.12a1.5 1.5 0 0 1-.533 1.043 1.59 1.59 0 0 1-1.066.415c-.532 0-.94-.243-1.225-.729C7.06 6.871 6.03 4.993 5.356 3.216l-.24-.654-3.544-.025c-.231 0-.36.013-.386.038-.027.025-.04.096-.04.213 0 .151.017.31.053.478l.56 1.409c1.491 3.638 3.112 6.505 4.862 8.6 1.75 2.096 3.468 3.144 5.155 3.144h2.665c.106 0 .186-.03.24-.088.053-.06.097-.172.133-.34l.053-.251.506-2.213c.142-.302.267-.503.373-.604a.975.975 0 0 1 .693-.277c.426 0 .861.243 1.305.73l2.265 2.716c.142.218.293.327.453.327h4.396c.533 0 .8-.126.8-.378a.466.466 0 0 0-.08-.251l-3.864-4.552c-.302-.352-.453-.73-.453-1.131 0-.403.142-.788.427-1.157.23-.336.679-.893 1.345-1.673a37.63 37.63 0 0 0 1.745-2.188c.498-.679.826-1.295.986-1.848l.08-.327a.371.371 0 0 1-.027-.163.574.574 0 0 0-.026-.189h-4.183c-.267.1-.48.252-.64.453l-.16.478c-.444 1.156-1.607 2.942-3.49 5.356a1.892 1.892 0 0 1-1.305.503Z"
-                  fill="#231F20" />
+                   />
               </svg>
               <span class="visually-hidden">ВКонтакте.</span>
             </a>
           </li>
           <li class="social__item">
             <a href="https://www.youtube.com/user/htmlacademyru" class="social__link">
-              <svg class="social__icon social__icon--yt" width="24" height="20" viewBox="0 0 24 20" fill="none"
+              <svg class="social__icon social__icon--yt" width="24" height="20" viewBox="0 0 24 20" fill="currentColor"
                 xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="m15.85 9.293-5.236-3.491a.655.655 0 0 0-1.014.545v6.982a.655.655 0 0 0 1.014.546l5.237-3.491a.655.655 0 0 0 0-1.091Zm-4.94 2.814V7.57l3.403 2.27-3.404 2.268Zm12.48-8.563a2.4 2.4 0 0 0-1.452-1.637C18.218.478 12.251.5 12 .5c-.25 0-6.218-.022-9.938 1.407A2.4 2.4 0 0 0 .61 3.544C.327 4.613 0 6.576 0 9.838c0 3.262.327 5.226.61 6.295a2.4 2.4 0 0 0 1.452 1.636c3.72 1.43 9.687 1.407 9.938 1.407h.076c.753 0 6.317-.043 9.862-1.407a2.4 2.4 0 0 0 1.451-1.636c.284-1.07.611-3.033.611-6.295s-.327-5.225-.61-6.294Zm-1.266 12.261a1.09 1.09 0 0 1-.655.742c-3.49 1.342-9.404 1.32-9.469 1.32-.066 0-5.978.022-9.47-1.32a1.09 1.09 0 0 1-.654-.742c-.261-1.003-.567-2.847-.567-5.967 0-3.12.306-4.963.567-5.967a1.09 1.09 0 0 1 .655-.742C6.02 1.787 11.934 1.81 12 1.81c.066 0 5.978-.022 9.47 1.32a1.092 1.092 0 0 1 .654.742c.262 1.004.567 2.847.567 5.967 0 3.12-.305 4.964-.567 5.968Z"
-                  fill="#231F20" />
+                   />
               </svg>
               <span class="visually-hidden">Youtube.</span>
             </a>
           </li>
           <li class="social__item">
             <a href="https://t.me/htmlacademy" class="social__link">
-              <svg class="social__icon social__icon--tg" width="20" height="18" viewBox="0 0 20 18" fill="none"
+              <svg class="social__icon social__icon--tg" width="20" height="18" viewBox="0 0 20 18" fill="currentColor"
                 xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd"
+                <path
                   d="M19.46.653c.18.15.265.382.227.611l-2.626 15.757a.657.657 0 0 1-1.012.439l-7.878-5.253a.656.656 0 0 1-.149-.956l2.611-3.263-4.36 2.906a.657.657 0 0 1-.658.041L.363 8.31a.657.657 0 0 1 .073-1.205L18.819.538a.657.657 0 0 1 .642.115ZM2.327 7.823 5.862 9.59l7.561-5.04a.656.656 0 0 1 .877.956l-4.805 6.006 6.438 4.292L18.208 2.15 2.326 7.823Z"
-                  fill="#231F20" />
+                   />
               </svg>
               <span class="visually-hidden">Telegram.</span>
             </a>
@@ -226,11 +237,11 @@
       <div class="footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <svg class="copyright__icon" width="27" height="35" viewBox="0 0 27 35" fill="none"
+          <svg class="copyright__icon" width="27" height="35" viewBox="0 0 27 35" fill="currentColor"
             xmlns="http://www.w3.org/2000/svg">
             <path
               d="M13.6 0h-.1L0 1.4v24.7l13.5 8 13.4-8V1.4L13.6 0ZM25 12.1 13.5 5.3v-.1h-.1l-.1-.1v.1L1.9 12.1v-9l11.5-1.2L25 3.1v9ZM13.4 6.8l11.5 6.7-4.5 2.6-7.1-4.2v1.4l5.9 3.5-.9.5-5-3v1.4l3.8 2.3-.8.5-3-1.8v1.4l1.9 1.1-1.8 1.1L2 13.6l11.4-6.8ZM1.9 15.1l11.4 6.8v1l-7.9-4.7v1.4l8 4.8v1.1l-8-4.7v1.4l8 4.8 8.1-4.9v-5.2l3.4-2v10l-11.5 6.9L1.9 25v-9.9Z"
-              fill="#63D1BB" />
+              />
           </svg>
           <span class="visually-hidden">HTML Academy</span>
         </a>
