--- a/source/catalog.html
+++ b/source/catalog.html
@@ -18,7 +18,7 @@
           <picture>
             <source media="(min-width: 1150px)" srcset="./img/mishka-logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="./img/mishka-logo-tablet.svg">
-            <img class="main-header__logo-image" src="./img/mishka-logo-mobile.svg" alt="Логотип магазина Мишка.">
+            <img class="main-nav__logo-image" src="./img/mishka-logo-mobile.svg" width="86px" height="35px" alt="Логотип магазина Мишка.">
           </picture>
         </a>
         <button class="main-nav__toggle" type="button">
