--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
           <picture>
             <source media="(min-width: 1150px)" srcset="./img/mishka-logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="./img/mishka-logo-tablet.svg">
-            <img class="main-header__logo-image" src="./img/mishka-logo-mobile.svg" alt="Логотип магазина Мишка.">
+            <img class="main-nav__logo-image" src="./img/mishka-logo-mobile.svg" width="86px" height="35px" alt="Логотип магазина Мишка.">
           </picture>
         </a>
         <button class="main-nav__toggle" type="button">
@@ -108,7 +108,7 @@
         <picture class="product__image">
           <source media="(min-width: 1150px)" srcset="./img/product-triple-set-desktop.jpg">
           <source media="(min-width: 768px)" srcset="./img/product-triple-set-tablet.jpg">
-          <img src="./img/product-triple-set-mobile.jpg" alt="Сет из трех вязаных корзинок.">
+          <img class="product__image-photo" src="./img/product-triple-set-mobile.jpg" width="260px" height="315px" alt="Сет из трех вязаных корзинок.">
         </picture>
         <p class="product__price">Цена: 990 руб.</p>
         <button class="product__button button" type="button">Заказать</button>
